--- a/index.html
+++ b/index.html
@@ -4,34 +4,46 @@
 
 <head>
 	<meta charset="utf-8">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sprint Challenge - Home</title>
-
+	<link rel="stylesheet" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
-	<div>
+<body class="mainContainer">
 		<!-- header -->
-		<header>
-			<div>
-				BLOOMTECH BAR AND GRILL
-
+		<header class="home">
+			<div class="bar">
+				<div id="homeButton">
+					<a class="homeButton" href="index.html" target="_blank"><h1>BLOOMTECH BAR AND GRILL</h1></a>
+				</div>
+			<nav>
+				<div  class="headerLinks">
 				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
+				<a class="buttonOne" href="menu.html" target="_blank">Menu</a>
+					<a class="buttonTwo" href="reservations" target="_blank">Reservations</a>
+					<a class="buttonThree" href="special offers" target="_blank">Special Offers</a>
+					<a class="buttonFour" href="contact" target="_blank">Contact</a>
+				</div>	
+				<div class="social">
+					<a href="http://facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+					<a href="http://twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+					<a href="http://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+				</div>
+			</nav>
+			</div>
 			</div>
 		</header>
 
 		<!-- gallery section -->
 		<section class="gallery">
-			<div>
+			<div class="galleryText">
 				<h2>OUR FOOD</h2>
+			</div>
+			<div class="galleryImages">
 
-				img/food-avocadotoast.jpg
+				<!-- img/food-avocadotoast.jpg
 
 				img/food-burger.jpg
 
@@ -47,7 +59,34 @@
 
 				img/food-tacos.jpg
 
-				img/food-wings.jpg
+				img/food-wings.jpg -->
+				<div class="box boxOne">
+					<img src="img/food-avocadotoast.jpg">
+				</div>
+                <div class="box boxTwo">
+					<img src="img/food-burger.jpg">
+				</div>
+                <div class="box boxThree">
+					<img src="img/food-poutine.jpg">
+				</div>
+                <div class="box boxFour">
+					<img src="img/food-ribs.jpg">
+				</div>
+                <div class="box boxFive">
+					<img src="img/food-sandwich.jpg">
+				</div>
+                <div class="box boxSix">
+					<img src="img/food-sausage.jpg">
+				</div>
+                <div class="box boxSeven">
+					<img src="img/food-steak.jpg">
+				</div>
+                <div class="box boxEight">
+					<img src="img/food-tacos.jpg">
+				</div>
+				<div class="box boxNine">
+					<img src="img/food-wings.jpg">
+				</div>
 			</div>
 		</section>
 
@@ -57,8 +96,9 @@
 		<!-- about section -->
 		<section class="about">
 			<div class="about-container">
-				<h2>ABOUT US</h2>
-
+				<div class="aboutHeader">
+					<h2>ABOUT US</h2>
+				</div>
 				<div id="cooks" class="pic">
 				</div>
 
@@ -124,18 +164,33 @@
 
 		<!-- footer -->
 		<footer>
-			<!-- email signup -->
-			Join our mailing list!
-			Sign Up
-			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
-			<!-- copyright -->
-			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
-		</footer>
-	</div>
+			<div class="footerContainer">
+				<div class="signUp">
+				<!-- email signup -->
+					<h4>Join our mailing list!</h4>
+					<div class="button">
+						<input type="text" placeholder="Email Address">
+						<button class="button-1">Sign Up</button>
+					</div>
+				</div>
+
+				<!-- nav -->
+				<nav>
+					<div class="navContainer">
+					<div class="footerLinks">
+						<a class="buttonOne" href="menu.html" target="_blank">Menu</a>
+						<a class="buttonTwo" href="reservations" target="_blank">Reservations</a>
+						<a class="buttonThree" href="special offers" target="_blank">Special Offers</a>
+						<a class="buttonFour" href="contact" target="_blank">Contact</a>
+					</div>
+				</div>
+				</nav>
+			</div>
+			<div class="copyrightText">
+				<!-- copyright -->
+				©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+			</div>
+	</footer>
 </body>
 
 </html>
